Navbar collapsing correctly on scroll.

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,3 +1,10 @@
+.navbar-brand {
+  height: 40px;
+  padding: 5px 15px;
+  font-size: 18px;
+  line-height: 1em;
+}
+
 .navbar-brand h1{
   color: #7AC943;
   font-size: 48px;
@@ -70,4 +77,33 @@
     clear:both;
     padding:14px;
   }
+}
+
+.top-nav-collapse {
+  padding: 0;
+  background-color: #000;
+}
+
+.navbar-custom.top-nav-collapse {
+  border-bottom: 1px solid rgba(255,255,255,.3);
+}
+
+
+.navbar-custom.top-nav-collapse .nav.navbar-nav {
+background-color: rgba(0,0,0,0);
+}
+
+.navbar-custom.top-nav-collapse ul.nav li a {
+-webkit-transition: all .2s ease-in-out;
+-moz-transition: all .2s ease-in-out;
+transition: all .2s ease-in-out;
+color: #fff;
+}
+
+.navbar-custom.top-nav-collapse ul.nav li.active a {
+  color: #000;
+}
+
+.navbar-custom.top-nav-collapse ul.nav ul.dropdown-menu li a {
+color: #666;
 }
